--- a/BeastTuners/Views/Shared/_Layout.cshtml
+++ b/BeastTuners/Views/Shared/_Layout.cshtml
@@ -29,19 +29,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="Index">Parts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inventory" asp-action="Index">Inventory</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="InventoryAdjustments" asp-action="Index">InventoryAdjustments</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Order</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OrderResults" asp-action="Index">OrderResults</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SuppliersDeliveries" asp-action="Index">SuppliersDeliveries</a>
                         </li>
                     </ul>
                 </div>
