added suppliers table

--- a/BeastTuners/Views/Shared/_Layout.cshtml
+++ b/BeastTuners/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="OrderResults" asp-action="Index">OrderResults</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Suppliers" asp-action="Index">Suppliers</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SuppliersDeliveries" asp-action="Index">SuppliersDeliveries</a>
                         </li>
                     </ul>
