--- a/BeastTuners/Views/InventoryAdjustments/Index.cshtml
+++ b/BeastTuners/Views/InventoryAdjustments/Index.cshtml
@@ -1,59 +1,41 @@
 ﻿@model IEnumerable<BeastTuners.Models.InventoryAdjustment>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Inventory Adjustments";
 }
 
-<h1>Index</h1>
+<h1>Inventory Adjustments</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<div class="mb-3">
+    <a asp-action="Create" class="btn btn-success">Create New Adjustment</a>
+</div>
+
+<table class="table table-striped">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.AdjustmentType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AdjustmentDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Reason)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Part)
-            </th>
-            <th></th>
+            <th>@Html.DisplayNameFor(model => model.AdjustmentType)</th>
+            <th>@Html.DisplayNameFor(model => model.Quantity)</th>
+            <th>@Html.DisplayNameFor(model => model.AdjustmentDate)</th>
+            <th>@Html.DisplayNameFor(model => model.Reason)</th>
+            <th>@Html.DisplayNameFor(model => model.Part)</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdjustmentType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdjustmentDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Reason)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Part.Category)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AdjustmentID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AdjustmentID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AdjustmentID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.AdjustmentType)</td>
+                <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
+                <td>@Html.DisplayFor(modelItem => item.AdjustmentDate)</td>
+                <td>@Html.DisplayFor(modelItem => item.Reason)</td>
+                <td>@Html.DisplayFor(modelItem => item.Part.PartName)</td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.AdjustmentID" class="btn btn-warning btn-sm">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.AdjustmentID" class="btn btn-info btn-sm">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.AdjustmentID" class="btn btn-danger btn-sm">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
