--- a/BeastTuners/Views/Parts/Create.cshtml
+++ b/BeastTuners/Views/Parts/Create.cshtml
@@ -1,41 +1,31 @@
 ﻿@model BeastTuners.Models.Part
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Part";
 }
 
-<h1>Create</h1>
+<h2>Create New Part</h2>
 
-<h4>Part</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="PartName" class="control-label"></label>
-                <input asp-for="PartName" class="form-control" />
-                <span asp-validation-for="PartName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
-                <span asp-validation-for="Category" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StockQuantity" class="control-label"></label>
-                <input asp-for="StockQuantity" class="form-control" />
-                <span asp-validation-for="StockQuantity" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<form asp-action="Create" method="post">
+    <div class="form-group">
+        <label asp-for="PartName" class="control-label"></label>
+        <input asp-for="PartName" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Category" class="control-label"></label>
+        <input asp-for="Category" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Price" class="control-label"></label>
+        <input asp-for="Price" class="form-control" type="number" step="0.01" />
+    </div>
+    <div class="form-group">
+        <label asp-for="StockQuantity" class="control-label"></label>
+        <input asp-for="StockQuantity" class="form-control" type="number" />
+    </div>
+    <button type="submit" class="btn btn-success">Create</button>
+</form>
+
     </div>
 </div>
 
