--- a/BeastTuners/Views/Parts/Index.cshtml
+++ b/BeastTuners/Views/Parts/Index.cshtml
@@ -16,6 +16,9 @@
             <option value="Engine">Engine</option>
             <option value="Brakes">Brakes</option>
             <option value="Wheels">Wheels</option>
+            <option value="Suspension">Suspension</option>
+            <option value="Interior">Interior</option>
+            <option value="Exhaust">Exhaust</option>
             <!-- Add more categories here -->
         </select>
 
