--- a/BeastTuners/Views/Parts/Create.cshtml
+++ b/BeastTuners/Views/Parts/Create.cshtml
@@ -39,7 +39,7 @@
 
     <div class="form-group">
         <label for="ImageFile" class="control-label">Upload Image</label>
-        <input type="file" name="ImageFile" class="form-control" />
+        <input type="file" name="ImageFile" class="form-control" accept="image/*" />
     </div>
 
     <button type="submit" class="btn btn-success">Create</button>
