edited my parts description table and added data

--- a/BeastTuners/Views/Parts/Category.cshtml
+++ b/BeastTuners/Views/Parts/Category.cshtml
@@ -10,8 +10,10 @@
     <thead>
         <tr>
             <th>@Html.DisplayNameFor(model => model.PartName)</th>
+            <th>@Html.DisplayNameFor(model => model.Category)</th>
             <th>@Html.DisplayNameFor(model => model.Price)</th>
             <th>@Html.DisplayNameFor(model => model.StockQuantity)</th>
+            <th>@Html.DisplayNameFor(model => model.Description)</th>
             <th>Image</th>
             <th>Actions</th>
         </tr>
