--- a/BeastTuners/Views/Parts/Index.cshtml
+++ b/BeastTuners/Views/Parts/Index.cshtml
@@ -19,11 +19,12 @@
             <option value="Suspension">Suspension</option>
             <option value="Interior">Interior</option>
             <option value="Exhaust">Exhaust</option>
+            <option value="Exterior">Exterior</option>
             <!-- Add more categories here -->
         </select>
 
         <button type="submit" class="btn btn-primary btn-search">🔍 Search</button>
-        <a asp-action="Index" class="btn btn-outline-secondary btn-sm">❌ Clear</a>
+        <a asp-action="Index" class="btn btn-outline-secondary">❌ Clear</a>
 
 
     </div>
