--- a/BeastTuners/Views/Parts/Category.cshtml
+++ b/BeastTuners/Views/Parts/Category.cshtml
@@ -41,6 +41,8 @@
                     <a asp-action="Edit" asp-route-id="@item.PartID" class="btn btn-warning btn-sm">Edit</a>
                     <a asp-action="Details" asp-route-id="@item.PartID" class="btn btn-info btn-sm">Details</a>
                     <a asp-action="Delete" asp-route-id="@item.PartID" class="btn btn-danger btn-sm">Delete</a>
+                    <a asp-action="AddToCart" asp-route-id="@item.PartID" asp-route-returnUrl="@Context.Request.Path?category=@ViewData["Category"]" class="btn btn-success btn-sm">🛒 Add to Cart</a>
+
                 </td>
             </tr>
         }
