--- a/BeastTuners/Views/Shared/_Layout.cshtml
+++ b/BeastTuners/Views/Shared/_Layout.cshtml
@@ -46,6 +46,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SuppliersDeliveries" asp-action="Index">SuppliersDeliveries</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Parts" asp-action="Cart">🛒 View Cart</a>
+                        </li>
+
                     </ul>
                 </div>
                 <partial name="_LoginPartial"/>
