--- a/BeastTuners/Views/Parts/Category.cshtml
+++ b/BeastTuners/Views/Parts/Category.cshtml
@@ -41,8 +41,13 @@
                     <a asp-action="Edit" asp-route-id="@item.PartID" class="btn btn-warning btn-sm">Edit</a>
                     <a asp-action="Details" asp-route-id="@item.PartID" class="btn btn-info btn-sm">Details</a>
                     <a asp-action="Delete" asp-route-id="@item.PartID" class="btn btn-danger btn-sm">Delete</a>
-                    <a asp-action="AddToCart" asp-route-id="@item.PartID" asp-route-returnUrl="@Context.Request.Path?category=@ViewData["Category"]" class="btn btn-success btn-sm">🛒 Add to Cart</a>
 
+                    
+                    <form asp-action="AddToCart" method="post" class="d-inline">
+                        <input type="hidden" name="id" value="@item.PartID" />
+                        <input type="number" name="quantity" value="1" min="1" class="form-control d-inline w-25" />
+                        <button type="submit" class="btn btn-success btn-sm">🛒 Add to Cart</button>
+                    </form>
                 </td>
             </tr>
         }
