--- a/BeastTuners/Views/Customers/Index.cshtml
+++ b/BeastTuners/Views/Customers/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<BeastTuners.Models.Customer>
+﻿@model IEnumerable<BeastTuners.Models.Employee>
 
 @{
-    ViewData["Title"] = "Customers";
+    ViewData["Title"] = "Employees";
 }
 
-<h1>Customers</h1>
+<h1>Employees</h1>
 
 <div class="mb-3">
-    <a asp-action="Create" class="btn btn-success">Create New Customer</a>
+    <a asp-action="Create" class="btn btn-success">Create New Employee</a>
 </div>
 
 <table class="table table-striped">
@@ -16,7 +16,7 @@
             <th>@Html.DisplayNameFor(model => model.FirstName)</th>
             <th>@Html.DisplayNameFor(model => model.LastName)</th>
             <th>@Html.DisplayNameFor(model => model.PhoneNumber)</th>
-            <th>@Html.DisplayNameFor(model => model.Address)</th>
+            <th>@Html.DisplayNameFor(model => model.HireDate)</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -27,11 +27,11 @@
                 <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
                 <td>@Html.DisplayFor(modelItem => item.LastName)</td>
                 <td>@Html.DisplayFor(modelItem => item.PhoneNumber)</td>
-                <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                <td>@Html.DisplayFor(modelItem => item.HireDate)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.CustomerID" class="btn btn-warning btn-sm">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.CustomerID" class="btn btn-info btn-sm">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.CustomerID" class="btn btn-danger btn-sm">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.EmployeeID" class="btn btn-warning btn-sm">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.EmployeeID" class="btn btn-info btn-sm">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.EmployeeID" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             </tr>
         }
