--- a/BeastTuners/Views/Employees/Index.cshtml
+++ b/BeastTuners/Views/Employees/Index.cshtml
@@ -48,11 +48,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Role)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.EmployeeID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.EmployeeID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.EmployeeID">Delete</a>
-            </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.EmployeeID" class="btn btn-warning btn-sm">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.EmployeeID" class="btn btn-info btn-sm">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.EmployeeID" class="btn btn-danger btn-sm">Delete</a>
+                </td>
+
         </tr>
 }
     </tbody>
