--- a/BeastTuners/Views/Employees/Index.cshtml
+++ b/BeastTuners/Views/Employees/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Employee</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<div class="mb-3">
+    <a asp-action="Create" class="btn btn-success">Create New Employee</a>
+</div>
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
