--- a/BeastTuners/Views/OrderResults/Create.cshtml
+++ b/BeastTuners/Views/OrderResults/Create.cshtml
@@ -13,8 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CustomerID" class="control-label"></label>
-                <select asp-for="CustomerID" class ="form-control" asp-items="ViewBag.CustomerID"></select>
+                <label asp-for="UserID" class="control-label"></label>
+                <select asp-for="UserID" class ="form-control" asp-items="ViewBag.CustomerID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="OrderDate" class="control-label"></label>
