--- a/BeastTuners/Views/OrderResults/Details.cshtml
+++ b/BeastTuners/Views/OrderResults/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
+            @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.Address)
+            @Html.DisplayFor(model => model.User.Address)
         </dd>
     </dl>
 </div>
