--- a/BeastTuners/Views/OrderResults/Index.cshtml
+++ b/BeastTuners/Views/OrderResults/Index.cshtml
@@ -16,7 +16,7 @@
             <th>@Html.DisplayNameFor(model => model.OrderDate)</th>
             <th>@Html.DisplayNameFor(model => model.TotalAmount)</th>
             <th>@Html.DisplayNameFor(model => model.Status)</th>
-            <th>@Html.DisplayNameFor(model => model.Customer)</th>
+            <th>@Html.DisplayNameFor(model => model.User)</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -27,7 +27,7 @@
                 <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                 <td>@Html.DisplayFor(modelItem => item.TotalAmount)</td>
                 <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                <td>@Html.DisplayFor(modelItem => item.Customer.Address)</td>
+                <td>@Html.DisplayFor(modelItem => item.User.Address)</td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.OrderID" class="btn btn-warning btn-sm">Edit</a>
                     <a asp-action="Details" asp-route-id="@item.OrderID" class="btn btn-info btn-sm">Details</a>
