hidden  crud operations from my customers

--- a/BeastTuners/Views/Home/Index.cshtml
+++ b/BeastTuners/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card shadow-sm">
                     <a asp-controller="Parts" asp-action="Category" asp-route-category="Wheels">
-                        <img src="~/images/RaptorWheels1.jpg" class="card-img-top img-fluid part-image" alt="Wheels">
+                        <img src="~/images/bmw.jpg" class="card-img-top img-fluid part-image" alt="Wheels">
                     </a>
                     <div class="card-body text-center">
                         <a asp-controller="Parts" asp-action="Category" asp-route-category="Wheels" class="btn btn-primary">Wheel Parts</a>
@@ -45,7 +45,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card shadow-sm">
                     <a asp-controller="Parts" asp-action="Category" asp-route-category="Exhaust">
-                        <img src="~/images/exhaust.jpg" class="card-img-top img-fluid part-image" alt="Exhaust">
+                        <img src="~/images/\Subiii.jpg" class="card-img-top img-fluid part-image" alt="Exhaust">
                     </a>
                     <div class="card-body text-center">
                         <a asp-controller="Parts" asp-action="Category" asp-route-category="Exhaust" class="btn btn-primary">Exhaust Parts</a>
@@ -56,7 +56,7 @@
             <div class="col-md-4 mb-3">
                 <div class="card shadow-sm">
                     <a asp-controller="Parts" asp-action="Category" asp-route-category="Suspension">
-                        <img src="~/images/suspension.jpg" class="card-img-top img-fluid part-image" alt="Suspension">
+                        <img src="~/images/Mudetr1.jpg" class="card-img-top img-fluid part-image" alt="Suspension">
                     </a>
                     <div class="card-body text-center">
                         <a asp-controller="Parts" asp-action="Category" asp-route-category="Suspension" class="btn btn-primary">Suspension Parts</a>
