--- a/BeastTuners/Views/Parts/Index.cshtml
+++ b/BeastTuners/Views/Parts/Index.cshtml
@@ -26,7 +26,7 @@
 </form>
 
 <div class="mb-3">
-    <a asp-controller="Parts" asp-action="Create" class="btn btn-success">Create New Part</a>
+    <a asp-controller="Parts" asp-action="Create" class="btn btn-secondary">Create New Part</a>
 </div>
 
 <table class="table table-striped">
